src/components/Widgets/Widgets.module.css
.widgetWrapper {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
}

.disabled {
  opacity: 0.25;
  pointer-events: none;
  cursor: not-allowed;
}

.textWrapper {
  height: 50px;
  padding: 0 10px 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  user-select: text;
  cursor: text;
}

.captionWrapper {
  width: 100%;
  max-width: 100%;
  max-height: 100%;
  overflow: scroll;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  user-select: text;
  cursor: text;
}

.text {
  background: #fff;
  font-weight: bold;
  padding: 5px;
  opacity: 0.75;
  height: min-content;
}

.shadow {
  filter: drop-shadow(0px 0px 5px #888);
}

.buttonsWrapper {
  height: 100%;
  overflow-x: hidden;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.buttonsWrapper.RTL {
  flex-direction: row-reverse;
}

/*center positions*/

.centerLeft {
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}

.centerCenter {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.centerRight {
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}

/*top positions*/

.topLeft {
  top: 0;
  left: 0;
}

.topCenter {
  top: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.top {
  top: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.topRight {
  top: 0;
  right: 0;
}

/*bottom positions*/

.bottomLeft {
  bottom: 0;
  left: 0;
}

.bottomCenter {
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.bottom {
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.bottomRight {
  bottom: 0;
  right: 0;
}

